[package]
name = "siglookup"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.20"
walkdir = "2.4.0"
rayon = "1.10.0"
colored = "3"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
serde_json = "1.0"
zip = "2"
